--- a/wiki/it/Macro_FCCircularText.html
+++ b/wiki/it/Macro_FCCircularText.html
@@ -76,7 +76,7 @@ Testo Circolare
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<p>Questa macro utilizza lo strumento <span typeof="mw:File"><a href="../Draft_ShapeString.html" title="Draft ShapeString"><img src="../File/Draft_ShapeString.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Draft_ShapeString.html" title="Draft ShapeString/it">Draft Forma da testo</a> per creare una riga di testo posizionata con diversi orientamenti circolari, inclusi circonferenza ed elicoidale alla maniera di una <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Trajan%27s_Column">Colonna di Traiano</a>. Pu&ograve; anche essere usata per creare un quadrante di orologio con numeri arabi <i>1, 2, 3,</i> ecc., o numeri romani <i>I, II, III,</i> ecc. Quest'ultimo utilizzo &egrave; stato ispirato dalla discussione del Forum <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=22&amp;t=5013&amp;hilit=Clock">Macro per creare il quadrante dell'orologio</a> del membro della comunit&agrave; FC, cblt2l.
+<p>Questa macro utilizza lo strumento <span typeof="mw:File"><a href="../Draft_ShapeString.html" title="Draft ShapeString"><img src="../File/Draft_ShapeString.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Draft_ShapeString.html" title="Draft ShapeString/it">Draft Forma da testo</a> per creare una riga di testo posizionata con diversi orientamenti circolari, inclusi circonferenza ed elica alla maniera di una <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Trajan%27s_Column">Colonna di Traiano</a>. Pu&ograve; anche essere usata per creare un quadrante di orologio con numeri arabi <i>1, 2, 3,</i> ecc., o numeri romani <i>I, II, III,</i> ecc. Quest'ultimo utilizzo &egrave; stato ispirato dalla discussione del Forum <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=22&amp;t=5013&amp;hilit=Clock">Macro per creare il quadrante dell'orologio</a> del membro della comunit&agrave; FC, cblt2l.
 </p>
 <div class="toccolours mw-collapsible mw-collapsed" style="cursor:not-allowed">
 <p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://gist.githubusercontent.com/mario52a/a25e802498bae6959335/raw/3a7b030af1395ebe515b7ac7ff399636df55fbc8/Macro_FCCircularText.FCMacro">Macro</a></i>
@@ -944,12 +944,12 @@ Modalit&agrave; rilievo:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121081539
+Cached time: 20260121081621
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.452 seconds
-Real time usage: 0.572 seconds
+CPU time usage: 0.486 seconds
+Real time usage: 1.141 seconds
 Preprocessor visited node count: 1646/1000000
 Post&#8208;expand include size: 41052/2097152 bytes
 Template argument size: 12615/2097152 bytes
@@ -960,19 +960,19 @@ Unstrip post&#8208;expand size: 66764/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  332.459      1 -total
-  2.65%    8.802      1 Template:Draft_Tools_navi/it
-  2.19%    7.294      1 Template:Userdocnavi/it
-  1.59%    5.275      2 Template:Navigation_menu_2
-  1.57%    5.208     10 Template:CheckBox
-  1.38%    4.572     10 Template:Code
-  1.29%    4.301     22 Template:Button
-  1.25%    4.158      7 Template:RadioButton
-  1.24%    4.108      1 Template:Caption
-  1.20%    3.975      6 Template:SpinBox
+100.00%  748.453      1 -total
+  2.33%   17.428      1 Template:Draft_Tools_navi/it
+  1.80%   13.479     10 Template:Code
+  1.28%    9.606      1 Template:Emphasis
+  1.11%    8.317      3 Template:ColoredText
+  1.06%    7.968     14 Template:Incode
+  1.02%    7.603      1 Template:Userdocnavi/it
+  0.95%    7.108     10 Template:CheckBox
+  0.86%    6.463     14 Template:TRUE
+  0.85%    6.346      2 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260121081539 and revision id 1741805. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260121081619 and revision id 1741807. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
