--- a/wiki/it/Macro_FCCircularText.html
+++ b/wiki/it/Macro_FCCircularText.html
@@ -3,7 +3,7 @@
 <li><a href="../Macro_FCCircularText.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCCircularText (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (33% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro CircularText (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: FCCircularText (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -376,7 +376,6 @@ I comandi non utilizzabili con l'opzione scelta sono visualizzati in grigio.
 		</li>
 </ul>
 </center>
-<div class="mw-translate-fuzzy">
 <ul><li>Di default, &egrave; nascosto e solo visibile se il <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Clock<span></span></span> e verificato.</li></ul>
 <div style="clear:both"></div>
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_16.png&amp;filetimestamp=20200601143709&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_16.png" decoding="async" width="492" height="452" class="mw-file-element" data-file-width="492" data-file-height="452"></a><figcaption></figcaption></figure>
@@ -385,10 +384,9 @@ I comandi non utilizzabili con l'opzione scelta sono visualizzati in grigio.
 <li>Angolo finale.</li>
 <li>Angolo di correzione.</li>
 <li>Correzione del raggio.</li>
-<li>I pulsanti <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Stand</span> o <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Flat</span>.</li></ol></li>
+<li>Il pulsante <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Stand</span> o <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Flat</span>.</li></ol></li>
 <li>L'area <b>Clock</b> &egrave; attiva.</li></ul>
 <div style="clear:both"></div>
-</div>
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_19.png&amp;filetimestamp=20200601140458&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_19.png" decoding="async" width="501" height="131" class="mw-file-element" data-file-width="501" data-file-height="131"></a><figcaption></figcaption></figure>
 <ul><li><b>Radius of support</b>&nbsp;: Se viene dato un valore, viene creato un supporto (default 0).</li>
 <li>Se <b>Support number face</b> &egrave; diverso da zero viene creato un supporto. Se <b>Extrude support </b>= zero viene creata una faccia.
@@ -944,35 +942,35 @@ Modalit&agrave; rilievo:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121081621
+Cached time: 20260121081802
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.486 seconds
-Real time usage: 1.141 seconds
-Preprocessor visited node count: 1646/1000000
+CPU time usage: 0.462 seconds
+Real time usage: 0.588 seconds
+Preprocessor visited node count: 1645/1000000
 Post&#8208;expand include size: 41052/2097152 bytes
 Template argument size: 12615/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66764/5000000 bytes
+Unstrip post&#8208;expand size: 66768/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  748.453      1 -total
-  2.33%   17.428      1 Template:Draft_Tools_navi/it
-  1.80%   13.479     10 Template:Code
-  1.28%    9.606      1 Template:Emphasis
-  1.11%    8.317      3 Template:ColoredText
-  1.06%    7.968     14 Template:Incode
-  1.02%    7.603      1 Template:Userdocnavi/it
-  0.95%    7.108     10 Template:CheckBox
-  0.86%    6.463     14 Template:TRUE
-  0.85%    6.346      2 Template:Navigation_menu_2
+100.00%  323.744      1 -total
+  3.29%   10.656      1 Template:Draft_Tools_navi/it
+  2.00%    6.459      1 Template:Macro/it
+  1.95%    6.308      2 Template:Navigation_menu_2
+  1.48%    4.804      1 Template:Userdocnavi/it
+  1.44%    4.652     10 Template:CheckBox
+  1.25%    4.046      1 Template:Caption
+  1.22%    3.956      1 Template:Codeextralink
+  1.20%    3.876     10 Template:Code
+  1.14%    3.682      3 Template:ColoredText
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260121081619 and revision id 1741807. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260121081801 and revision id 1741809. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
