--- a/wiki/it/Macro_MeasureCircle.html
+++ b/wiki/it/Macro_MeasureCircle.html
@@ -117,13 +117,10 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <p>Copiare la macro nella propria cartella delle macro ed eseguirla (per maggiori dettagli vedere <a href="../it/How_to_install_macros.html" title="How to install macros/it">Come installare le macro</a>).
 </p>
-<div class="mw-translate-fuzzy">
-<p>Basta selezionare i vertici e il risultato viene mostrato nel pannello Report.
-I bordi sono selezionabili e valgono come due vertici.
-Pu&ograve; anche essere selezionato un bordo circolare.
-Se sono selezionati due bordi, il vertice finale del secondo bordo non viene utilizzato nel calcolo.
-</p>
-</div>
+<ul><li>Basta selezionare i vertici e il risultato viene mostrato nel pannello Report.</li>
+<li>I bordi sono selezionabili e valgono come due vertici.</li>
+<li>Pu&ograve; anche essere selezionato un bordo circolare.</li>
+<li>Se sono selezionati due bordi, il vertice finale del secondo bordo non viene utilizzato nel calcolo.</li></ul>
 <div class="mw-translate-fuzzy">
 <p>&Egrave; possibile selezionare gli elementi e poi lanciare la macro oppure lanciare la macro senza selezione e poi selezionare gli elementi dopo il lancio.
 Se non ci sono abbastanza elementi selezionati prima di lanciare la macro, &egrave; necessario selezionare gli elementi mancanti.
@@ -147,13 +144,13 @@ Se non ci sono abbastanza elementi selezionati prima di lanciare la macro, &egra
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121081857
+Cached time: 20260121081915
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.064 seconds
-Preprocessor visited node count: 103/1000000
+CPU time usage: 0.037 seconds
+Real time usage: 0.067 seconds
+Preprocessor visited node count: 102/1000000
 Post&#8208;expand include size: 2599/2097152 bytes
 Template argument size: 864/2097152 bytes
 Highest expansion depth: 5/100
@@ -163,13 +160,13 @@ Unstrip post&#8208;expand size: 2058/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.285      1 -total
- 48.89%    5.028      1 Template:Macro/it
- 24.36%    2.505      1 Template:Codeextralink
- 22.88%    2.353      1 Template:Clear
+100.00%   16.442      1 -total
+ 45.20%    7.432      1 Template:Macro/it
+ 41.81%    6.875      1 Template:Codeextralink
+ 10.84%    1.783      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67638-0!canonical and timestamp 20260121081857 and revision id 1741813. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67638-0!canonical and timestamp 20260121081915 and revision id 1741815. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
