--- a/wiki/it/Macro_MeasureCircle.html
+++ b/wiki/it/Macro_MeasureCircle.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_MeasureCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Kreis messen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_MeasureCircle.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro MeasureCircle (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_MeasureCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro MeasureCircle (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_MeasureCircle.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Oblicz promie&#324; (8% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -121,11 +121,8 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <li>I bordi sono selezionabili e valgono come due vertici.</li>
 <li>Pu&ograve; anche essere selezionato un bordo circolare.</li>
 <li>Se sono selezionati due bordi, il vertice finale del secondo bordo non viene utilizzato nel calcolo.</li></ul>
-<div class="mw-translate-fuzzy">
-<p>&Egrave; possibile selezionare gli elementi e poi lanciare la macro oppure lanciare la macro senza selezione e poi selezionare gli elementi dopo il lancio.
-Se non ci sono abbastanza elementi selezionati prima di lanciare la macro, &egrave; necessario selezionare gli elementi mancanti.
+<p>&Egrave; possibile selezionare gli elementi e poi avviare la macro oppure avviare la macro senza alcuna selezione e selezionare gli elementi dopo l'avvio.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>If not enough elements are selected before launching the macro, you must select the missing elements.
 </p>
@@ -144,29 +141,29 @@ Se non ci sono abbastanza elementi selezionati prima di lanciare la macro, &egra
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121081915
+Cached time: 20260121081945
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.067 seconds
-Preprocessor visited node count: 102/1000000
+CPU time usage: 0.029 seconds
+Real time usage: 0.046 seconds
+Preprocessor visited node count: 101/1000000
 Post&#8208;expand include size: 2599/2097152 bytes
 Template argument size: 864/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2058/5000000 bytes
+Unstrip post&#8208;expand size: 2059/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.442      1 -total
- 45.20%    7.432      1 Template:Macro/it
- 41.81%    6.875      1 Template:Codeextralink
- 10.84%    1.783      1 Template:Clear
+100.00%    7.285      1 -total
+ 41.00%    2.987      1 Template:Macro/it
+ 31.91%    2.325      1 Template:Codeextralink
+ 24.24%    1.766      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67638-0!canonical and timestamp 20260121081915 and revision id 1741815. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67638-0!canonical and timestamp 20260121081945 and revision id 1741817. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
