--- a/wiki/it/Macro_MeasureCircle.html
+++ b/wiki/it/Macro_MeasureCircle.html
@@ -122,12 +122,8 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <li>Pu&ograve; anche essere selezionato un bordo circolare.</li>
 <li>Se sono selezionati due bordi, il vertice finale del secondo bordo non viene utilizzato nel calcolo.</li></ul>
 <p>&Egrave; possibile selezionare gli elementi e poi avviare la macro oppure avviare la macro senza alcuna selezione e selezionare gli elementi dopo l'avvio.
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>If not enough elements are selected before launching the macro, you must select the missing elements.
-</p>
-</div>
-<p><span id="Code"></span>
+</p><p>Se non sono selezionati abbastanza elementi prima di avviare la macro, &egrave; necessario selezionare gli elementi mancanti.
+</p><p><span id="Code"></span>
 </p>
 <h2><span class="mw-headline" id="Codice">Codice</span></h2>
 <p>L'ultima versione della macro si trova in <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master/Information/MeasureCircle.FCMacro">MeasureCircle.FCMacro</a> ma il modo pi&ugrave; semplice per installare questa macro &egrave; tramite <a href="../it/Std_AddonMgr.html" title="Std AddonMgr/it">Addon Manager</a>.
@@ -141,13 +137,13 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121081945
+Cached time: 20260121082000
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.029 seconds
-Real time usage: 0.046 seconds
-Preprocessor visited node count: 101/1000000
+CPU time usage: 0.034 seconds
+Real time usage: 0.054 seconds
+Preprocessor visited node count: 100/1000000
 Post&#8208;expand include size: 2599/2097152 bytes
 Template argument size: 864/2097152 bytes
 Highest expansion depth: 5/100
@@ -157,13 +153,13 @@ Unstrip post&#8208;expand size: 2059/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.285      1 -total
- 41.00%    2.987      1 Template:Macro/it
- 31.91%    2.325      1 Template:Codeextralink
- 24.24%    1.766      1 Template:Clear
+100.00%    8.699      1 -total
+ 42.50%    3.697      1 Template:Macro/it
+ 29.67%    2.581      1 Template:Codeextralink
+ 24.26%    2.110      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67638-0!canonical and timestamp 20260121081945 and revision id 1741817. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67638-0!canonical and timestamp 20260121082000 and revision id 1741819. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
