--- a/wiki/it/Macro_MeasureCircle.html
+++ b/wiki/it/Macro_MeasureCircle.html
@@ -127,23 +127,19 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </p>
 <h2><span class="mw-headline" id="Codice">Codice</span></h2>
 <p>L'ultima versione della macro si trova in <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master/Information/MeasureCircle.FCMacro">MeasureCircle.FCMacro</a> ma il modo pi&ugrave; semplice per installare questa macro &egrave; tramite <a href="../it/Std_AddonMgr.html" title="Std AddonMgr/it">Addon Manager</a>.
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_MeasureCircle.png&amp;filetimestamp=20160408193149&amp;.html" class="mw-file-description"><img src="../File/Macro_MeasureCircle.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Macro_MeasureCircle.FCMacro</b>
+</p><p>Icona barra strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_MeasureCircle.png&amp;filetimestamp=20160408193149&amp;.html" class="mw-file-description"><img src="../File/Macro_MeasureCircle.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>Macro_MeasureCircle.FCMacro</b>
 </p>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121082000
+Cached time: 20260121082011
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.054 seconds
-Preprocessor visited node count: 100/1000000
+CPU time usage: 0.039 seconds
+Real time usage: 0.092 seconds
+Preprocessor visited node count: 99/1000000
 Post&#8208;expand include size: 2599/2097152 bytes
 Template argument size: 864/2097152 bytes
 Highest expansion depth: 5/100
@@ -153,13 +149,13 @@ Unstrip post&#8208;expand size: 2059/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.699      1 -total
- 42.50%    3.697      1 Template:Macro/it
- 29.67%    2.581      1 Template:Codeextralink
- 24.26%    2.110      1 Template:Clear
+100.00%   14.471      1 -total
+ 37.19%    5.382      1 Template:Macro/it
+ 33.58%    4.859      1 Template:Codeextralink
+ 24.00%    3.473      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67638-0!canonical and timestamp 20260121082000 and revision id 1741819. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67638-0!canonical and timestamp 20260121082011 and revision id 1741821. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
