--- a/wiki/it/Macro_MeasureCircle.html
+++ b/wiki/it/Macro_MeasureCircle.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_MeasureCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Kreis messen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_MeasureCircle.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro MeasureCircle (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_MeasureCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro MeasureCircle (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_MeasureCircle.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Oblicz promie&#324; (8% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -75,11 +75,8 @@ Misura cerchio
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Questa macro calcola e riporta il raggio e il centro di un cerchio dati 3 punti o uno spigolo circolare.
-Traccia una linea dal centro del cerchio al primo vertice, che pu&ograve; essere utilizzato per misurazioni future.
+<p>Questa macro calcola e riporta il raggio e il centro di un cerchio dati 3 punti o un bordo circolare.
 </p>
-</div>
 <div class="toccolours mw-collapsible mw-collapsed" style="cursor:not-allowed">
 <p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master/Information/MeasureCircle.FCMacro">Macro</a></i>
 </p>
@@ -133,29 +130,29 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121082011
+Cached time: 20260121082041
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.039 seconds
-Real time usage: 0.092 seconds
-Preprocessor visited node count: 99/1000000
+Real time usage: 0.050 seconds
+Preprocessor visited node count: 98/1000000
 Post&#8208;expand include size: 2599/2097152 bytes
 Template argument size: 864/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2059/5000000 bytes
+Unstrip post&#8208;expand size: 2063/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.471      1 -total
- 37.19%    5.382      1 Template:Macro/it
- 33.58%    4.859      1 Template:Codeextralink
- 24.00%    3.473      1 Template:Clear
+100.00%    7.646      1 -total
+ 40.57%    3.102      1 Template:Macro/it
+ 28.53%    2.181      1 Template:Codeextralink
+ 26.79%    2.048      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67638-0!canonical and timestamp 20260121082011 and revision id 1741821. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67638-0!canonical and timestamp 20260121082041 and revision id 1741823. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
