--- a/wiki/it/Macro_StraightenObject.html
+++ b/wiki/it/Macro_StraightenObject.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro StraightenObject/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+StraightenObject&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_StraightenObject.html" class="mw-pt-progress mw-pt-progress--high" title="Makro StraightenObject (82% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_StraightenObject.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Objekt begradigen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_StraightenObject.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro StraightenObject (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_StraightenObject.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro StraightenObject (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
@@ -168,11 +168,8 @@ Il codice viene fornito in questa pagina per comodit&agrave; nel caso in cui il 
 <ul><li>Gli elementi di riferimento devono appartenere tutti al primo oggetto selezionato. Le voci di riferimento tra pi&ugrave; oggetti non sono attualmente supportate</li>
 <li>Gli oggetti raddrizzati devono essere in un sistema di coordinate corrispondente a quello globale. Se hai usato i contenitori Parte per individuare i tuoi oggetti, dovresti prima usare <a href="../it/Macro_PlacementAbsolufy.html" title="Macro PlacementAbsolufy/it">Macro PlacementAbsolufy</a> <span typeof="mw:File"><a href="../index.php?title=Macro_PlacementAbsolufy.png&amp;filetimestamp=20190713150005&amp;.html" class="mw-file-description"><img src="../File/Macro_PlacementAbsolufy.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> sul tuo modello. Se questa condizione non viene soddisfatta, possono accadere cose strane.</li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_StraightenObject.png&amp;filetimestamp=20190713152556&amp;.html" class="mw-file-description"><img src="../File/Macro_StraightenObject.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Macro_StraightenObject.FCMacro</b>
+<p>Icona barra strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_StraightenObject.png&amp;filetimestamp=20190713152556&amp;.html" class="mw-file-description"><img src="../File/Macro_StraightenObject.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>Macro_StraightenObject.FCMacro</b>
 </p>
 <pre>#!/usr/bin/python
 #####################################
@@ -399,28 +396,28 @@ else:
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20251009171104
+Cached time: 20260121082135
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.098 seconds
-Preprocessor visited node count: 120/1000000
+CPU time usage: 0.038 seconds
+Real time usage: 0.073 seconds
+Preprocessor visited node count: 119/1000000
 Post&#8208;expand include size: 2570/2097152 bytes
 Template argument size: 13319/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 13508/5000000 bytes
+Unstrip post&#8208;expand size: 13514/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.115      1 -total
- 61.83%    2.544      1 Template:Macro/it
- 34.12%    1.404      1 Template:MacroCode
+100.00%    9.074      1 -total
+ 58.02%    5.265      1 Template:Macro/it
+ 40.45%    3.670      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:176844-0!canonical and timestamp 20251009171104 and revision id 1659543. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:176844-0!canonical and timestamp 20260121082135 and revision id 1741825. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
