--- a/wiki/it/Macro_FreeCAD_to_Kerkythea.html
+++ b/wiki/it/Macro_FreeCAD_to_Kerkythea.html
@@ -72,11 +72,11 @@ FC in Kerkythea
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Macro per esportare il proprio modello nel programma di raytracing <a rel="nofollow" class="external text" href="http://www.kerkythea.net/cms/">Kerkythea</a>.
 </p>
 </div>
@@ -679,12 +679,12 @@ exportKerkythea().exec_()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20251116110156
+Cached time: 20260121084937
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.052 seconds
-Real time usage: 0.061 seconds
+CPU time usage: 0.039 seconds
+Real time usage: 0.080 seconds
 Preprocessor visited node count: 107/1000000
 Post&#8208;expand include size: 2040/2097152 bytes
 Template argument size: 24301/2097152 bytes
@@ -695,13 +695,13 @@ Unstrip post&#8208;expand size: 25386/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.934      1 -total
- 66.34%    5.927      1 Template:Macro/it
- 19.89%    1.777      1 Template:MacroCode
-  9.35%    0.835      1 Template:Clear
+100.00%   14.516      1 -total
+ 47.72%    6.927      1 Template:Macro/it
+ 32.48%    4.715      1 Template:MacroCode
+ 17.67%    2.565      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59530-0!canonical and timestamp 20251116110156 and revision id 1692974. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59530-0!canonical and timestamp 20260121084937 and revision id 1741827. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
