--- a/wiki/it/Macro_FreeCAD_to_Kerkythea.html
+++ b/wiki/it/Macro_FreeCAD_to_Kerkythea.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_FreeCAD_to_Kerkythea.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro FreeCAD nach Kerkythea (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FreeCAD_to_Kerkythea.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FreeCAD to Kerkythea (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_FreeCAD_to_Kerkythea.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro FreeCAD to Kerkythea (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_FreeCAD_to_Kerkythea.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: FreeCAD do Kerkythea (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -79,11 +79,8 @@ FC in Kerkythea
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Utilizzo_2">Utilizzo</span></h2>
 <p>La macro &egrave; disponibile nel seguente repository github: <a rel="nofollow" class="external text" href="https://github.com/marmni/FreeCAD-Kerkythea">FreeCAD to Kerkythea-Exporter</a>
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>E' praticamente auto-esplicativa.
 Al momento ci sono problemi per esportare le luci e la posizione della telecamera.
@@ -675,29 +672,29 @@ exportKerkythea().exec_()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121084950
+Cached time: 20260121084957
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.085 seconds
-Preprocessor visited node count: 103/1000000
+CPU time usage: 0.029 seconds
+Real time usage: 0.055 seconds
+Preprocessor visited node count: 99/1000000
 Post&#8208;expand include size: 2040/2097152 bytes
 Template argument size: 24301/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 25386/5000000 bytes
+Unstrip post&#8208;expand size: 25387/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.468      1 -total
- 43.43%    7.586      1 Template:Clear
- 36.77%    6.423      1 Template:Macro/it
- 18.21%    3.181      1 Template:MacroCode
+100.00%   10.323      1 -total
+ 47.02%    4.854      1 Template:Clear
+ 31.01%    3.201      1 Template:Macro/it
+ 20.28%    2.093      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59530-0!canonical and timestamp 20260121084950 and revision id 1741831. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59530-0!canonical and timestamp 20260121084956 and revision id 1741833. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
